--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,7 +8,7 @@
   <meta http-equiv="Expires" content="0" />
 
   <!-- Cache-busting for CSS and JS -->
-  <link rel="stylesheet" href="styles.css?v=<?= time() ?>" />
+  <link rel="stylesheet" href="{{ url_for('static',filename='styles/homeStyle.css') }}?v=<?= time() ?>" />
   <script src="app.js?v=<?= time() ?>"></script>
   <script>
         // Clear localStorage
