--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,13 +3,11 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
-
   <!-- Cache-busting for CSS and JS -->
-  <link rel="stylesheet" href="{{ url_for('static',filename='styles/homeStyle.css') }}?v=<?= time() ?>" />
-  <script src="app.js?v=<?= time() ?>"></script>
   <script>
         // Clear localStorage
         localStorage.clear();
