--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -76,6 +76,7 @@
               {% if result_reveal %}
               <h5><b>Here is your secret message!</b></h5>
               <input type="text" value='{{result_reveal}}' name="ext_msg" id="ext_msg"  required>
+              <input type="reset" value="Reset Form">
               {% endif %}
             </form>
           </div>
