--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -77,7 +77,7 @@
               <h5><b>Here is your secret message!</b></h5>
               <input type="text" value='{{result_reveal}}' name="ext_msg" id="ext_msg"  required>
               {% endif %}
-              <input type="reset" value="Reset Form">
+              <div><input type="reset" value="Reset Form"></div>
             </form>
           </div>
 
