--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,23 +3,6 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta charset="UTF-8">
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <meta http-equiv="Expires" content="0" />
-  <!-- Cache-busting for CSS and JS -->
-  <script>
-        // Clear localStorage
-        localStorage.clear();
-
-        // Clear sessionStorage
-        sessionStorage.clear();
-
-        // Clear cookies
-        document.cookie.split(";").forEach(function(c) {
-            document.cookie = c.replace(/^ +/, "").replace(/=.*/, "=;expires=" + new Date().toUTCString() + ";path=/");
-        });
-  </script>
   <link rel="icon" href="../static/search.png" sizes="16x16" type="image/png">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/homeStyle.css') }}">
   <link rel="preload" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" as="style" onload="this.rel='stylesheet'">
@@ -51,7 +34,7 @@
               <br>
               <label for="psw"><b>Password</b></label><br>
               <input type="password" placeholder="Enter Password" name="psw" id="psw" required><br>
-              <label for="cvr_msg"><b> Cover Message</b></label><br>
+              <label for="psw"><b> Cover Message</b></label><br>
               <input type="text" placeholder="Enter your message" name="cvr_msg" id="cvr_msg" required>
               <br>
               <button type="submit" class="hidebtn" onclick="onButtonClickHide()">Hide    <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
@@ -69,7 +52,7 @@
               <hr>
               <label for="psw_rev"><b>Password</b></label><br>
               <input type="password" placeholder="Enter Password" name="psw_rev" id="psw_rev" required><br>
-              <label for="steg_msg"><b> Steg Message</b></label><br>
+              <label for="psw"><b> Steg Message</b></label><br>
               <input type="text" placeholder="Enter your steg message" name="steg_msg" id="steg_msg" required>
               <br>
               <button type="submit" class="revealbtn" onclick="onButtonClickReveal()">Get Secret    <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
