--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <form action="homepage.html" method="get">
   <div class="container container1">
     <div class="container container2">
       <div class="row " style="text-align: center;">
@@ -67,7 +68,7 @@
 
       </div>
     </div>
-
+  </form>
 </body>
 
 </html>
